@startuml
skinparam classAttributeIconSize 0


class ViewCatalogUI <<presentation>>



class ViewCatalogController <<application>>

class ProductSorter
class ProductRepository <<repository>>



entity Product <<Entity>> <<Root>> {
- ProductDescription
}


    entity Category <<Entity>>




ViewCatalogController --> Category
ViewCatalogController --> Product: theProduct
ViewCatalogController -->Brand
ViewCatalogController -->ShortDescription
ViewCatalogUI --> ViewCatalogController : theController
ViewCatalogUI ..> Product : theProduct
ViewCatalogUI : doShow()
ViewCatalogController --> ProductRepository : repo
ViewCatalogController --> ProductSorter : sorter
ProductSorter : sortByPrice(productList)
ProductSorter : sortByName(productList)
ViewCatalogController : getProductByBrand( brand)
ViewCatalogController : getProductByCategory( category)
ViewCatalogController : getProductByDescription( shortDescription)
ViewCatalogController : sortByPrice( productList)
ViewCatalogController : sortByDescription( productList)

ProductRepository : findAllProducts()

@enduml